# AndroNN

./: CMakeLists.txt  README.txt  test.cpp
andronn/: AndroNN.cpp  AndroNN.hpp  CMakeLists.txt
androprob/: CMakeLists.txt  ExpectationMaximization.cpp  ExpectationMaximization.hpp  Gaussian.cpp  Gaussian.hpp  Probabilities.cpp  Probabilities.hpp
samples/: CMakeLists.txt
samples/testem/: CMakeLists.txt  testem.cpp
samples/testnn/: CMakeLists.txt  cifar10_reader.hpp  test.cpp
samples/testprob/: CMakeLists.txt  testprob.cpp
utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
